--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="https://www.youtube.com/" target="_blank">Home</a></li>
+        		<li><a href="https://www.youtube.com/watch?v=qUH5I_jKRB0" target="_blank">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
